plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.11'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example.algashop'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	mockitoAgent
	all {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'com.fasterxml.uuid:java-uuid-generator:5.2.0'
	implementation 'commons-validator:commons-validator:1.10.1'
	implementation 'io.hypersistence:hypersistence-tsid:2.1.4'
	implementation 'org.modelmapper:modelmapper:3.2.4'
	runtimeOnly 'com.h2database:h2'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.assertj:assertj-core:3.27.7'
	mockitoAgent('org.mockito:mockito-core') {
		transitive = false
	}
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(Test).configureEach {
	jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
}

tasks.named('test') {
	useJUnitPlatform()

	filter {
		excludeTestsMatching("*IT")
	}
}

tasks.named('check') {
	dependsOn(test, integrationTest)
}

tasks.register('integrationTest', Test) {
	description = 'Run integration tests.'
	group = 'verification'

	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath

	shouldRunAfter test

	useJUnitPlatform()

	testLogging {
		events "passed"
	}

	filter {
		includeTestsMatching "*IT"
		excludeTestsMatching "*Test"
	}
}
